--- a/GeneralToolkitLib/GeneralToolkitLib.csproj
+++ b/GeneralToolkitLib/GeneralToolkitLib.csproj
@@ -23,6 +23,8 @@
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisIgnoreGeneratedCode>true</CodeAnalysisIgnoreGeneratedCode>
     <CodeAnalysisRuleSet>GeneralToolkitLib.ruleset</CodeAnalysisRuleSet>
+    <RegisterForComInterop>false</RegisterForComInterop>
+    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -45,7 +47,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>GeneralToolkit.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>SignKeys\keypair.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <DelaySign>false</DelaySign>
@@ -102,6 +104,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Barcode\QRCoder.cs" />
+    <Compile Include="CmdParsing\CommandParserBase.cs" />
+    <Compile Include="CmdParsing\ParameterParserResult.cs" />
+    <Compile Include="CmdParsing\SimpleParameterParser.cs" />
     <Compile Include="Compression\SevenZip\CodeProgressImplementation.cs" />
     <Compile Include="Compression\SevenZip\CoderPropID.cs" />
     <Compile Include="Compression\SevenZip\Common\CommandForm.cs" />
@@ -149,19 +154,23 @@
     <Compile Include="DataTypes\UInt128.cs" />
     <Compile Include="Encryption\CryptoProgress.cs" />
     <Compile Include="Encryption\EncryptionManager.cs" />
-    <Compile Include="Encryption\Licence\DataConverters\ObjectSerializer.cs" />
-    <Compile Include="Encryption\Licence\DataModels\RegistrationDataModel.cs" />
-    <Compile Include="Encryption\Licence\LicenceService.cs" />
+    <Compile Include="Encryption\License\DataConverters\ObjectSerializer.cs" />
+    <Compile Include="Encryption\License\DataModels\RegistrationDataModel.cs" />
+    <Compile Include="Encryption\License\LicenceService.cs" />
     <Compile Include="Encryption\RSAKeySetIdentity.cs" />
     <Compile Include="Encryption\RSALocalCryptoKeyManager.cs" />
     <Compile Include="Encryption\RSA_AsymetricEncryption.cs" />
-    <Compile Include="Encryption\Licence\DataModels\LicenceDataModel.cs" />
-    <Compile Include="Encryption\Licence\RegistrationDataManager.cs" />
-    <Compile Include="Encryption\Licence\SerialNumberManager.cs" />
-    <Compile Include="Encryption\Licence\StaticData\SerialNumbersSettings.cs" />
-    <Compile Include="Encryption\Licence\SysInfoManager.cs" />
+    <Compile Include="Encryption\License\DataModels\LicenseDataModel.cs" />
+    <Compile Include="Encryption\License\RegistrationDataManager.cs" />
+    <Compile Include="Encryption\License\SerialNumberManager.cs" />
+    <Compile Include="Encryption\License\StaticData\SerialNumbersSettings.cs" />
+    <Compile Include="Encryption\License\SysInfoManager.cs" />
     <Compile Include="Events\Unsubscriber.cs" />
     <Compile Include="Logging\SerilogAutoConfig.cs" />
+    <Compile Include="Storage\OpenAndSaveFileTaskAsyncExProgress.cs" />
+    <Compile Include="Utility\Serialization\GenericObjectSerializer.cs" />
+    <Compile Include="Utility\Serialization\ObjectSerializer.cs" />
+    <Compile Include="Utility\Serialization\RawSerializer.cs" />
     <Compile Include="Utility\TypedObjectCompare.cs" />
     <Compile Include="Hashing\ChecksumFileGenerator.cs" />
     <Compile Include="Hashing\ChecksumProgress.cs" />
@@ -225,11 +234,11 @@
     <Compile Include="UserControls\CreateLicenceRequestControl.Designer.cs">
       <DependentUpon>CreateLicenceRequestControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="UserControls\LicenceInfoControl.cs">
+    <Compile Include="UserControls\LicenseInfoControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UserControls\LicenceInfoControl.Designer.cs">
-      <DependentUpon>LicenceInfoControl.cs</DependentUpon>
+    <Compile Include="UserControls\LicenseInfoControl.Designer.cs">
+      <DependentUpon>LicenseInfoControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Utility\DataConverters\ObjectSerializer.cs" />
     <Compile Include="Utility\FileSystem.cs" />
@@ -255,19 +264,19 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Autofac">
-      <Version>4.9.2</Version>
+      <Version>4.9.4</Version>
     </PackageReference>
     <PackageReference Include="AutofacSerilogIntegration">
       <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="AutoMapper">
-      <Version>8.1.1</Version>
+      <Version>9.0.0</Version>
     </PackageReference>
     <PackageReference Include="JetBrains.Annotations">
-      <Version>2019.1.1</Version>
+      <Version>2019.1.3</Version>
     </PackageReference>
     <PackageReference Include="morelinq">
-      <Version>3.1.1</Version>
+      <Version>3.2.0</Version>
     </PackageReference>
     <PackageReference Include="MoreLinq.Source.MoreEnumerable.DistinctBy">
       <Version>1.0.2</Version>
@@ -305,6 +314,7 @@
   <ItemGroup>
     <None Include="GeneralToolkitLib.ruleset" />
     <None Include="Resources\default.ico" />
+    <None Include="SignKeys\keypair.snk" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -325,17 +335,22 @@
     <EmbeddedResource Include="UserControls\CreateLicenceRequestControl.resx">
       <DependentUpon>CreateLicenceRequestControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UserControls\LicenceInfoControl.resx">
-      <DependentUpon>LicenceInfoControl.cs</DependentUpon>
+    <EmbeddedResource Include="UserControls\LicenseInfoControl.resx">
+      <DependentUpon>LicenseInfoControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserControls\ProgressWaitControl.resx">
       <DependentUpon>ProgressWaitControl.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
     </PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
