--- a/GeneralToolkitLib/GeneralToolkitLib.csproj
+++ b/GeneralToolkitLib/GeneralToolkitLib.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GeneralToolkitLib</RootNamespace>
     <AssemblyName>GeneralToolkitLib</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -44,7 +44,7 @@
     <ApplicationIcon>Resources\default.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>SignKeys\keypair.snk</AssemblyOriginatorKeyFile>
@@ -82,21 +82,12 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
-    <Reference Include="System.Activities" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
     <Reference Include="System.Numerics" />
-    <Reference Include="System.Reflection.Context" />
-    <Reference Include="System.Runtime.DurableInstancing" />
-    <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Security" />
-    <Reference Include="System.ServiceModel.Activation" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Windows" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.XML" />
@@ -165,6 +156,7 @@
     <Compile Include="Encryption\License\SerialNumberManager.cs" />
     <Compile Include="Encryption\License\StaticData\SerialNumbersSettings.cs" />
     <Compile Include="Encryption\License\SysInfoManager.cs" />
+    <Compile Include="Events\ControlBorderUpdateEventArgs.cs" />
     <Compile Include="Events\Unsubscriber.cs" />
     <Compile Include="Logging\SerilogAutoConfig.cs" />
     <Compile Include="Storage\OpenAndSaveFileTaskAsyncExProgress.cs" />
@@ -267,27 +259,16 @@
       <Version>4.9.4</Version>
     </PackageReference>
     <PackageReference Include="AutofacSerilogIntegration">
-      <Version>2.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="AutoMapper">
-      <Version>9.0.0</Version>
+      <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="JetBrains.Annotations">
       <Version>2019.1.3</Version>
     </PackageReference>
-    <PackageReference Include="morelinq">
-      <Version>3.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="MoreLinq.Source.MoreEnumerable.DistinctBy">
-      <Version>1.0.2</Version>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
     <PackageReference Include="protobuf-net">
-      <Version>2.4.0</Version>
+      <Version>2.4.4</Version>
     </PackageReference>
     <PackageReference Include="Serilog">
-      <Version>2.8.0</Version>
+      <Version>2.9.0</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Enrichers.Thread">
       <Version>3.1.0</Version>
@@ -299,7 +280,7 @@
       <Version>3.1.0</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Sinks.File">
-      <Version>4.0.0</Version>
+      <Version>4.1.0</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Sinks.PeriodicBatching">
       <Version>2.2.0</Version>
