--- a/GeneralToolkitLib/GeneralToolkitLib.csproj
+++ b/GeneralToolkitLib/GeneralToolkitLib.csproj
@@ -47,7 +47,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>SignKeys\keypair.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>GeneralToolkit2.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <DelaySign>false</DelaySign>
@@ -283,7 +283,7 @@
       <Version>4.1.0</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Sinks.PeriodicBatching">
-      <Version>2.2.0</Version>
+      <Version>2.3.0</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Sinks.RollingFile">
       <Version>3.3.0</Version>
@@ -293,6 +293,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="GeneralToolkit2.pfx" />
     <None Include="GeneralToolkitLib.ruleset" />
     <None Include="Resources\default.ico" />
     <None Include="SignKeys\keypair.snk" />
