--- a/GeneralToolkitLib/GeneralToolkitLib.csproj
+++ b/GeneralToolkitLib/GeneralToolkitLib.csproj
@@ -41,7 +41,7 @@
     <CodeAnalysisIgnoreGeneratedCode>false</CodeAnalysisIgnoreGeneratedCode>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Resources\default.ico</ApplicationIcon>
+    <ApplicationIcon>tools.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
@@ -266,13 +266,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Autofac">
-      <Version>5.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="Autofac.Extensions.DependencyInjection">
       <Version>6.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection">
+      <Version>7.0.2</Version>
+    </PackageReference>
     <PackageReference Include="AutofacSerilogIntegration">
-      <Version>3.0.0</Version>
+      <Version>5.0.0-dev-00050</Version>
     </PackageReference>
     <PackageReference Include="JetBrains.Annotations">
       <Version>2020.1.0</Version>
@@ -280,11 +280,14 @@
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces">
       <Version>1.1.1</Version>
     </PackageReference>
+    <PackageReference Include="morelinq">
+      <Version>3.3.2</Version>
+    </PackageReference>
     <PackageReference Include="protobuf-net">
-      <Version>3.0.29</Version>
+      <Version>3.0.52</Version>
     </PackageReference>
     <PackageReference Include="Serilog">
-      <Version>2.9.0</Version>
+      <Version>2.10.0</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Enrichers.Thread">
       <Version>3.1.0</Version>
@@ -298,9 +301,6 @@
     <PackageReference Include="Serilog.Sinks.File">
       <Version>4.1.0</Version>
     </PackageReference>
-    <PackageReference Include="Serilog.Sinks.RollingFile">
-      <Version>3.3.0</Version>
-    </PackageReference>
     <PackageReference Include="Serilog.Sinks.Trace">
       <Version>2.1.0</Version>
     </PackageReference>
@@ -311,13 +311,11 @@
       <Visible>False</Visible>
     </AdditionalFiles>
     <None Include="CodeSignCert.pfx" />
-    <None Include="GeneralToolkit2.pfx" />
     <None Include="GeneralToolkitLib.ruleset" />
     <None Include="Resources\default.ico" />
     <None Include="SignKeys\keypair.snk" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="GeneralToolkit.pfx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -341,7 +339,9 @@
       <DependentUpon>ProgressWaitControl.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="tools.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
