--- a/GeneralToolkitLib/GeneralToolkitLib - Backup.csproj
+++ b/GeneralToolkitLib/GeneralToolkitLib - Backup.csproj
@@ -5,7 +5,7 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWindowsForms>true</UseWindowsForms>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
-    <Platforms>AnyCPU;x64</Platforms>
+    <Platforms>AnyCPU;x86;x64</Platforms>
     <Configurations>Debug;Release</Configurations>
 
   </PropertyGroup>
@@ -20,7 +20,8 @@
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DefineConstants>$(DefineConstants)TRACE</DefineConstants>
+    <DefineConstants> ;RELEASE;NET;NET6_0;NETCOREAPP
+    </DefineConstants>
     <RunCodeAnalysis>false</RunCodeAnalysis>
     <RegisterForComInterop>false</RegisterForComInterop>
     <CodeAnalysisRuleSet>GeneralToolkitLib.ruleset</CodeAnalysisRuleSet>
@@ -39,8 +40,27 @@
     <WarningLevel>0</WarningLevel>
     <Optimize>True</Optimize>
   </PropertyGroup>
-
-
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
+    <DefineConstants> ;RELEASE;NET;NET6_0;NETCOREAPP
+    </DefineConstants>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
+    <RegisterForComInterop>false</RegisterForComInterop>
+    <CodeAnalysisRuleSet>GeneralToolkitLib.ruleset</CodeAnalysisRuleSet>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
+    <CodeAnalysisIgnoreGeneratedCode>false</CodeAnalysisIgnoreGeneratedCode>
+    <WarningLevel>0</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Deploy|x86'">
+    <DefineConstants> ;RELEASE;NET;NET6_0;NETCOREAPP
+    </DefineConstants>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
+    <RegisterForComInterop>false</RegisterForComInterop>
+    <CodeAnalysisRuleSet>GeneralToolkitLib.ruleset</CodeAnalysisRuleSet>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
+    <CodeAnalysisIgnoreGeneratedCode>false</CodeAnalysisIgnoreGeneratedCode>
+    <WarningLevel>0</WarningLevel>
+    <Optimize>True</Optimize>
+  </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>tools.ico</ApplicationIcon>
   </PropertyGroup>
@@ -60,7 +80,6 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <OutputPath>bin\x64\Debug\</OutputPath>
     <CodeAnalysisRuleSet>GeneralToolkitLib.ruleset</CodeAnalysisRuleSet>
-    <DefineConstants>$(DefineConstants)TRACE</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <DebugType>none</DebugType>
@@ -68,7 +87,6 @@
     <CodeAnalysisIgnoreGeneratedCode>false</CodeAnalysisIgnoreGeneratedCode>
     <CodeAnalysisRuleSet>GeneralToolkitLib.ruleset</CodeAnalysisRuleSet>
     <LangVersion>8.0</LangVersion>
-    <DefineConstants>$(DefineConstants)TRACE</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Deploy|x64'">
     <DebugType>none</DebugType>
@@ -77,6 +95,9 @@
     <CodeAnalysisRuleSet>GeneralToolkitLib.ruleset</CodeAnalysisRuleSet>
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="System.Xml.Serialization" />
+  </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Settings.Designer.cs">
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -110,15 +131,15 @@
     <PackageReference Include="AutoMapper.Contrib.Autofac.DependencyInjection">
       <Version>6.0.1</Version>
     </PackageReference>
-    <PackageReference Include="Castle.Core" Version="5.0.0" />
+    <PackageReference Include="Castle.Core" Version="4.4.1" />
     <PackageReference Include="JetBrains.Annotations">
-      <Version>2022.1.0</Version>
+      <Version>2021.3.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces">
       <Version>6.0.0</Version>
     </PackageReference>
     <PackageReference Include="protobuf-net">
-      <Version>3.1.4</Version>
+      <Version>3.0.101</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Enrichers.Thread">
       <Version>3.1.0</Version>
@@ -135,12 +156,18 @@
     <PackageReference Include="Serilog.Sinks.Trace">
       <Version>3.0.0</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.3.326103">
+    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.3.310801">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
   </ItemGroup>
-    <ItemGroup>
+  <ItemGroup>
+    <AdditionalFiles Include="..\..\ImageView\DependencyValidation1\DependencyValidation1.layerdiagram">
+      <Link>DependencyValidation1.layerdiagram</Link>
+      <Visible>False</Visible>
+    </AdditionalFiles>
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="tools.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -149,10 +176,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-    <None Include="E:\Data\AllProjectImagesAndIcons\nuoveXT.2.2\128x128\categories\applications-development.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
@@ -168,7 +191,6 @@
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <WarningLevel>0</WarningLevel>
-    <DefineConstants>$(DefineConstants)TRACE</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
     <WarningLevel>0</WarningLevel>
@@ -184,10 +206,5 @@
 	  <ApplicationManifest>Properties\AssemblyInfo.cs</ApplicationManifest>
 	  <PlatformTarget>AnyCPU</PlatformTarget>
 	  <Nullable>disable</Nullable>
-	  <BaseOutputPath>bin\</BaseOutputPath>
-	  <Version>3.1.1</Version>
-	  <Company>Martin Dahl</Company>
-	  <PackageIcon>applications-development.png</PackageIcon>
-	  <Description>Generic functionality Library</Description>
   </PropertyGroup>
 </Project>
